Fixed cutting off the side of the graph in Firefox.

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 #model {
     height: 85vh;
+    width: 99vw;
 }
 
 .process-node rect {
